@@ -46,19 +46,33 @@
 #include "logger.h"
 #include "socket.h"
 
-static char *cleanmetas (char *cstr)
+static char *cleanmetas (const char *cstr)
 {
-  register char *c = cstr;
-  
-  if (! cstr)
-    return NULL;
-  
+  /* The largest single element we can have is 256 bytes according to the RFC,
+     so this buffer size should be safe even if it's all ' */
+  char buffer[1024] = {0};
+  register char *c = (char *) cstr;
+  register char *b = buffer;
+
+  if (! cstr || strlen (cstr) == 0)
+      return b;
+
   do
     if (*c == 39)
-      *c = ' ';
+      {
+	*b++ = '\'';
+	*b++ = '\\';
+	*b++ = '\'';
+	*b++ = '\'';
+      }
+    else
+      *b++ = *c;
   while (*c++);
-  
-  return cstr;
+
+  *b++ = 0;
+  b = buffer;
+
+  return b;
 }
 
 static void exec_script (const char *script, const char *infofile,
@@ -68,7 +82,7 @@ static void exec_script (const char *script, const char *infofile,
   pid_t pid;
   char *const argc[4] =
     { (char *) script, (char *) infofile, (char *) arg, NULL };
- 
+
   if (! script || ! infofile || ! arg)
     return;
 
@@ -78,9 +92,9 @@ static void exec_script (const char *script, const char *infofile,
 	logger (LOG_ERR, "`%s': %s", script, strerror (ENOENT));
       return;
     }
-  
+
   logger (LOG_DEBUG, "exec \"%s %s %s\"", script, infofile, arg);
- 
+
   /* We don't wait for the user script to finish - do we trust it? */
   /* Don't use vfork as we lose our memory when dhcpcd exits
      causing the script to fail */
@@ -183,7 +197,7 @@ static int make_ntp (const char *ifname, const dhcp_t *dhcp)
       logger (LOG_ERR, "fopen `%s': %s", NTPFILE, strerror (errno));
       return -1;
     }
-	  
+
   fprintf (f, "# Generated by dhcpcd for interface %s\n", ifname);
   fprintf (f, "restrict default noquery notrust nomodify\n");
   fprintf (f, "restrict 127.0.0.1\n");
@@ -230,11 +244,12 @@ static int make_nis (const char *ifname, const dhcp_t *dhcp)
     fprintf (f, "%s %s\n", prefix, inet_ntoa (address->address));
 
   fclose (f);
-  
+
   return 0;
 }
 
-static int write_info(const interface_t *iface, const dhcp_t *dhcp)
+static int write_info(const interface_t *iface, const dhcp_t *dhcp,
+		      const options_t *options)
 {
   FILE *f;
   route_t *route;
@@ -252,7 +267,7 @@ static int write_info(const interface_t *iface, const dhcp_t *dhcp)
   fprintf (f, "BROADCAST='%s'\n", inet_ntoa (dhcp->broadcast));
   if (dhcp->mtu > 0)
     fprintf (f, "MTU='%d'\n", dhcp->mtu);
-  
+
   if (dhcp->routes)
     {
       fprintf (f, "ROUTES='");
@@ -322,20 +337,22 @@ static int write_info(const interface_t *iface, const dhcp_t *dhcp)
 	}
       fprintf (f, "'\n");
     }
- 
+
   if (dhcp->rootpath)
     fprintf (f, "ROOTPATH='%s'\n", cleanmetas (dhcp->rootpath));
 
   fprintf (f, "DHCPSID='%s'\n", inet_ntoa (dhcp->serveraddress));
-  fprintf (f, "DHCPCHADDR='%s'\n", ether_ntoa (&iface->ethernet_address));
   fprintf (f, "DHCPSNAME='%s'\n", cleanmetas (dhcp->servername));
   fprintf (f, "LEASETIME='%u'\n", dhcp->leasetime);
   fprintf (f, "RENEWALTIME='%u'\n", dhcp->renewaltime);
   fprintf (f, "REBINDTIME='%u'\n", dhcp->rebindtime);
   fprintf (f, "INTERFACE='%s'\n", iface->name);
-  fprintf (f, "CLASSID='%s'\n", cleanmetas (dhcp->classid));
-  fprintf (f, "CLIENTID='%s'\n", cleanmetas (dhcp->clientid));
-
+  fprintf (f, "CLASSID='%s'\n", cleanmetas (options->classid));
+  if (options->clientid[0])
+    fprintf (f, "CLIENTID='%s'\n", cleanmetas (options->clientid));
+  else
+    fprintf (f, "CLIENTID='%s'\n", ether_ntoa (&iface->ethernet_address));
+  fprintf (f, "DHCPCHADDR='%s'\n", ether_ntoa (&iface->ethernet_address));
   fclose (f);
   return 0;
 }
@@ -351,7 +368,7 @@ int configure (const options_t *options, interface_t *iface,
   char curhostname[HOSTNAME_MAX_LEN] = {0};
   char *dname = NULL;
   int dnamel = 0;
- 
+
   if (! options || ! iface || ! dhcp)
     return -1;
 
@@ -369,10 +386,10 @@ int configure (const options_t *options, interface_t *iface,
 		if (new_route->destination.s_addr == route->destination.s_addr
 		    && new_route->netmask.s_addr == route->netmask.s_addr
 		    && new_route->gateway.s_addr == route->gateway.s_addr)
-		   {
-		     have = 1;
-		     break;
-		   }
+		  {
+		    have = 1;
+		    break;
+		  }
 	    if (! have)
 	      del_route (iface->name, route->destination, route->netmask,
 			 route->gateway, options->metric);
@@ -409,7 +426,7 @@ int configure (const options_t *options, interface_t *iface,
   /* Now delete the old address if different */
   if (iface->previous_address.s_addr != dhcp->address.s_addr
       && iface->previous_address.s_addr != 0)
-  	del_address (iface->name, iface->previous_address);
+    del_address (iface->name, iface->previous_address);
 
 #ifdef __linux__
   /* On linux, we need to change the subnet route to have our metric. */
@@ -431,7 +448,7 @@ int configure (const options_t *options, interface_t *iface,
     {
       route_t *new_routes = NULL;
       int remember;
-      
+
       for (route = dhcp->routes; route; route = route->next)
 	{
 	  /* Don't set default routes if not asked to */
@@ -440,8 +457,8 @@ int configure (const options_t *options, interface_t *iface,
 	    continue;
 
 	  remember = add_route (iface->name, route->destination,
-				    route->netmask,  route->gateway,
-				    options->metric);
+				route->netmask,  route->gateway,
+				options->metric);
 	  /* If we failed to add the route, we may have already added it
 	     ourselves. If so, remember it again. */
 	  if (remember < 0)
@@ -507,7 +524,7 @@ int configure (const options_t *options, interface_t *iface,
     }
 
   gethostname (curhostname, sizeof (curhostname));
-  
+
   if (options->dohostname
       || strlen (curhostname) == 0
       || strcmp (curhostname, "(none)") == 0
@@ -523,9 +540,9 @@ int configure (const options_t *options, interface_t *iface,
 	}
     }
 
-  write_info (iface, dhcp);
+  write_info (iface, dhcp, options);
 
-   if (iface->previous_address.s_addr != dhcp->address.s_addr)
+  if (iface->previous_address.s_addr != dhcp->address.s_addr)
     {
       memcpy (&iface->previous_address,
 	      &dhcp->address, sizeof (struct in_addr));
